--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "json": "json-server ./src/data.js -p 3500 -m ./src/authMiddleware.js"
   },
   "dependencies": {
+    "@types/vuelidate": "^0.7.13",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
@@ -34,6 +35,7 @@
     "font-awesome": "^4.7.0",
     "jsonwebtoken": "^8.5.1",
     "typescript": "~3.9.3",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.11",
+    "vuelidate": "^0.7.5"
   }
 }
