--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "bootstrap": "^4.5.2",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "faker": "^4.1.0",
     "font-awesome": "^4.7.0",
     "jsonwebtoken": "^8.5.1",
     "typescript": "~3.9.3",
